style.css
/* || Custom Variables */

:root {
    --clr-accent: #54E6AF;
    --clr-hover: #B3FFE2;
    --clr-white: #FFF;
    --clr-dark: #121725;
    --clr-dark-transparent: rgba(18, 23, 37, 0.3);

    --clr-dark-blue: #2C344B;
    --clr-med-blue: #5A668A;
    --clr-light-blue: #C2CBE5;
    --clr-error: #FB3E3E;

    --ff-chivo: 'Chivo', sans-serif;

    --fw-bold: 900;
    --fw-normal: 400;
    --fw-light: 300;
}

/* || RESET */

html {
    box-sizing: border-box;
  }
  
  *, *:before, *:after {
    box-sizing: inherit;
  }
  
  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
    margin: 0;
    padding: 0;
    font-weight: normal;
    font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  }
  
  ol, ul {
    list-style: none;
  }
  
  img {
    max-width: 100%;
    height: auto;
  }

a {
    text-decoration: none;
}

/* || Global / Mobile */

html {
    min-height: 100%;
    background-image: url(assets/mobile/image-host.jpg);
    background-size: cover;
    box-shadow: inset 0 0 0 2000px var(--clr-dark-transparent);
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 1.5rem;
    font-family: var(--ff-chivo);
}

.background-images {
    display: none;
}

.main-logo {
    margin: 2.5rem 0 3.5rem 0;
}

h1 {
    text-transform: uppercase;
    color: var(--clr-accent);
    font-size: 1.625rem;
    line-height: 2.375rem;
    font-weight: var(--fw-light);
    margin-bottom: 1rem;
}

span {
    color: var(--clr-white);
}

p {
    color: var(--clr-light-blue);
    font-weight: var(--fw-light);
    line-height: 1.6rem;
}

.div-dots {
    display: none;
}

/* reverse order of form & logos */
#flex {
    display: flex;
    flex-direction: column;
}

#logos { order: 1; }
#form { order: 2; }
/* ========= */

.section-logos {
    display: flex;
    justify-content: space-between;
    margin: 2rem 0rem 3rem;
    align-items: center;
    gap: 1.5rem;
}

.sponsor-logo {
    color: var(--clr-med-blue);
}

form {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

input [type=text], button {
    display: block;
}

input {
    background-color: var(--clr-dark-blue);
    padding: 14px 32px;
    border-radius: 100px;
    border: none;
    font-size: 0.875rem;
    font-weight: var(--fw-bold);
    color: var(--clr-med-blue);
}

input:focus {
    color: var(--clr-white);
    outline: none;
    font-weight: var(--fw-normal);
}

button {
    background-color: var(--clr-accent);
    padding: 14px 0;
    border-radius: 100px;
    border: none;
    font-size: 0.875rem;
    font-weight: var(--fw-bold);
    box-shadow: 0px 25px 20px -20px rgba(84, 230, 175, 0.50);
}

/* || TABLET (768px) */
@media (min-width: 48em) {
    html {
        background-image: none;
        background-color: var(--clr-dark);
        box-shadow: none;
    }

    body {
        position: relative;
        display: inherit;
        text-align: left;
        padding: 2.5rem;
    }

    .background-images {
        display: inline;
        position: absolute;
        right: 0;
        top: 0;
        z-index: -1;
        transform: scale(2.0);
        transform-origin: top right;
    }

    .main-logo {
        margin: 0.5rem 0 3.5rem 0;
        width: 6rem;
    }

    main {
        background-color: var(--clr-dark);
        padding: 6rem 3rem 6rem 0;
        margin-top: 9.5rem;
    }

    h1{
        font-size: 3rem;
        line-height: 3.5rem;
    }

    p{
        width: 75%;
        font-size: 1.125rem;
        margin: 2rem 0 2.5rem 0;
    }

    #logos { order: 2; }
    #form { order: 1; }

    form {
        flex-direction: row;
        background-color: var(--clr-dark-blue);
        width: 75%;
        max-width: 30rem;
        justify-content: space-between;
        padding: 5px;
        border-radius: 100px;
    }

    input {
        width: 60%;
        border-radius: 100px;
        border: none;
        font-size: 0.875rem;
    }

    input:-webkit-autofill,
    input:-webkit-autofill:hover, 
    input:-webkit-autofill:focus, 
    input:-webkit-autofill:active{
        -webkit-background-clip: text;
        -webkit-text-fill-color: var(--clr-white);
        transition: background-color 5000s ease-in-out 0s;
        /* box-shadow: inset 0 0 20px 20px var(--clr-dark-transparent); */
}


    button {
        background-color: var(--clr-accent);
        padding: 14px 30px;
    }    
    
    button:hover {
        background-color: var(--clr-hover);
        padding: 14px 30px;
    }

    .section-logos {
        width: 90%;
    }

    .div-dots {
        display: block;
        position: fixed;
        bottom: -5px;
    }

}





/* || DESKTOP (1440px) */
@media (min-width: 90em) {


}

